# RodentsRevenge

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile.xbox  README.md  appveyor.yml  conanfile.txt  defs.h  enemy.c  enemy.h  entity.c  entity.h  game.c  game.h  grid.c  grid.h  input.h  main.c  player.c  player.h  point.c  point.h  sdl_controller.c  sdl_controller.h  sdl_display.c  sdl_display.h  sdl_input.c  sdl_renderer.c  sdl_renderer.h  spawn.c  spawn.h
assets/levels/: level01.txt  level02.txt  level03.txt  level04.txt
cmake/: util_functions.cmake
src/: animation.h  assets.h  clock.c  clock.h  debug.c  debug.h  enemy.c  enemy.h  entity.c  entity.h  game.c  game.h  game_private.h  grid.c  grid.h  high_scores.c  high_scores.h  input.h  main.c  player.c  player.h  point.c  point.h  pool.c  pool.h  spawn.c  spawn.h  spawner.c  spawner.h  util.c  util.h  vec2.c  vec2.h  yarn.c  yarn.h
src/desktop/: desktop_main.c
src/draw/: animation.c  animation.h  color.c  color.h  rect.c  rect.h  renderer.c  renderer.h  sprite.h  sprites.h  spritesheet.c  spritesheet.h
src/sdl/: sdl_animation.c  sdl_animation.h  sdl_display.c  sdl_display.h  sdl_game.c  sdl_game.h  sdl_input.c  sdl_input.h  sdl_renderer.c  sdl_renderer.h
src/ui/: basic_rect.c  basic_rect.h  basic_sprite.c  basic_sprite.h  button.c  button.h  clock.c  clock.h  common.c  common.h  element.c  element.h  game_over.c  game_over.h  game_ui.c  game_ui.h  high_score_dialog.c  high_score_dialog.h  high_scores_ui.c  high_scores_ui.h  level_select_dialog.c  level_select_dialog.h  level_select_ui.c  level_select_ui.h  lives.c  lives.h  menu.c  menu.h  onscreen_keyboard.c  onscreen_keyboard.h  pause_dialog.c  pause_dialog.h  score.c  score.h  scoreboard.c  scoreboard.h  text_input.c  text_input.h  title_ui.c  title_ui.h  (+2 more)
src/xbox/: xbox_main.c
